@@ -12,6 +12,7 @@ v8.0.29
 =======
 
 - WL#14824: Remove Python 3.6 support
+- WL#14679: Allow custom class for data type conversion in Django backend
 
 v8.0.28
 =======
